syntax = "proto2";

package fast_semantic_segmentation.protos;
import "protos/pspnet.proto";

message SegmentationModel {
    oneof model {
        PSPNet pspnet = 1;
    }
}